revenue-attribution/main/default/objects/SBQQ__Quote__c/fields/New_Sale_Total__c.field-meta.xml
<CustomField>
    <fullName>New_Sale_Total__c</fullName>
    <label>New Sale Total</label>
    <summarizedField>SBQQ__QuoteLine__c.New_Sale_Amount__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>