revenue-attribution/main/default/objects/SBQQ__Quote__c/fields/Renewal_Total__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Total__c</fullName>
    <label>Renewal Total</label>
    <summarizedField>SBQQ__QuoteLine__c.Renewal_Amount__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>